Fix #1859 -- remove gap between linenos and code

--- a/nikola/data/themes/base/assets/css/rst.css
+++ b/nikola/data/themes/base/assets/css/rst.css
@@ -248,11 +248,8 @@ pre.address {
   margin-top: 0 ;
   font: inherit }
 
-pre.literal-block, pre.doctest-block, pre.math, pre.code {
-  margin-left: 2em ;
-  margin-right: 2em }
-
 pre.code .ln { color: grey; } /* line numbers */
+/*
 pre.code, code { background-color: #eeeeee; }
 pre.code .comment, code .comment { color: #5C6576 }
 pre.code .keyword, code .keyword { color: #3B0D06; font-weight: bold }
@@ -260,6 +257,7 @@ pre.code .literal.string, code .literal.string { color: #0C5404 }
 pre.code .name.builtin, code .name.builtin { color: #352B84 }
 pre.code .deleted, code .deleted { background-color: #DEB0A1}
 pre.code .inserted, code .inserted { background-color: #A3D289}
+*/
 
 span.classifier {
   font-family: sans-serif ;
